# msrp

./: .gitignore  Dockerfile  README.md  compose.yaml  exploratory_analysis.ipynb  extract.py  loader.py  main.py  pyproject.toml  transform.py
.github/workflows/: docker-image.yml
dbt_msrp/: dbt_project.yml
dbt_msrp/models/example/: my_first_dbt_model.sql  schema.yml
